# 2021-school-pom

./: .gitignore  CMakeLists.txt  README.md
data/srtmgl3_v003_hgt/: N01E014.hgt  N28E083.hgt
lib/catch2/: CMakeLists.txt
lib/declarative/: CMakeLists.txt
lib/declarative/example/: fract.cpp  sandbox.cpp
lib/declarative/src/: CMakeLists.txt
pom/: CMakeLists.txt
pom/io/endianness/: reverse.hpp
pom/io/exception/: all.hpp  exception.hpp  not_implemented.hpp  precondition_violation.hpp
pom/io_format/srtm/: all.hpp
pom/io_format/wavefront/: all.hpp  obj.hpp  obj_f.hpp  obj_v.hpp  obj_vt.hpp
pom/io_qt/: CMakeLists.txt  all.hpp
pom/io_std/: all.hpp  open.hpp  read.hpp
pom/maths/: CMakeLists.txt  all.hpp  constants.hpp
pom/maths/detail/: hypercube.hpp
pom/maths/interpolation/: matrix.hpp
pom/maths/interval/: all.hpp  concepts.hpp  interval.hpp  iterators.hpp  map.hpp  operations.hpp
pom/maths/matrix/: all.hpp  col_row_indexes.hpp  concepts.hpp  interpolation.hpp  matrix.hpp  ranges.hpp
pom/maths/operation/: all.hpp  clamp.hpp  cubic_step.hpp  floor.hpp  fract.hpp  gradient.hpp  hash.hpp  lerp.hpp  noise.hpp  smax.hpp  smin.hpp  smoothstep.hpp
pom/maths/vector/: all.hpp  indexes.hpp  throw.hpp  vector.hpp
pom/meta/: CMakeLists.txt
pom/meta/exception/: all.hpp  exception.hpp  invariant_violation.hpp  not_implemented.hpp  precondition_violation.hpp
pom/meta/tag/: all.hpp  checked.hpp  defaulted.hpp  unchecked.hpp
pom/meta/type/: all.hpp  debug.hpp  same.hpp  tuple.hpp  type.hpp
pom/meta/type_list/: all.hpp  at.hpp  debug.hpp  empty.hpp  factories.hpp  has.hpp  head.hpp  index.hpp  size.hpp  tail.hpp  tuple.hpp  type_list.hpp  union.hpp
pom/sandbox/: CMakeLists.txt  coloration.cpp  declarative.cpp  erosion.cpp  gradients.cpp  maths.cpp  symbolic.cpp  terrain.cpp
pom/symbolic/: CMakeLists.txt
pom/symbolic/operation/: derivative.hpp  operators.hpp  str.hpp  value.hpp
pom/symbolic/symbol/: all.hpp
pom/terrain/: all.hpp  examples.hpp  heightfield.hpp  paths.hpp  terrain_test.hpp  tesselation.hpp  wavefront.hpp
pom/terrain/coloration/: all.hpp
pom/terrain/function/: all.hpp
production/rendering/: setup.blend  setup.blend1
production/report/: main.tex  mybib.bib  template.tex
wiki/: experiments.md  primitives_and_operators.md  resources.md
(+167 files in other folders)
